version/0.18/_sources/api/solver/_autosummary/settings/report_files.rst.txt
:orphan:

.. _report_files:

report_files
============

.. autoclass:: ansys.fluent.core.solver.settings_232.report_files.report_files
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`report_files_child <report_files_child>`


.. rubric:: Included in:

========================   ====================

Parent                                  Summary

========================   ====================
:ref:`monitor <monitor>`       'monitor' child.

========================   ====================

