version/0.19/_sources/api/solver/_autosummary/settings/report_files.rst.txt
:orphan:

.. _report_files:

report_files
============

.. autoclass:: ansys.fluent.core.solver.settings_241.report_files.report_files
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`report_files_child <report_files_child>`


.. rubric:: Included in:

==========================   ====================

Parent                                    Summary

==========================   ====================
:ref:`monitor <monitor_1>`       'monitor' child.

==========================   ====================

